# BHumanCodeRelease

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  DBHC.patch  License.md  License.txt  LicenseNaoDevils.txt  README.md
Make/CMake/: AppleHelper.cmake  B-Human.cmake  Booster.cmake  BoosterToolchain.cmake  CMakeLists.txt  CheckThreads.cmake  CompiledNN.cmake  Config.cmake  Controller.cmake  Debugging.cmake  DeployDialog.cmake  DeployDialogRunner.cmake  Framework.cmake  ImageProcessing.cmake  LogPlayback.cmake  Math.cmake  MathBase.cmake  Nao.cmake  NaoToolchain.cmake  Network.cmake  OptionsAndSkills.cmake  Platform.cmake  Python.cmake  RobotParts.cmake  SimulatedNao.cmake  Streaming.cmake  Tests.cmake  asmjit.cmake  bush.cmake  deploy.cmake  qtpropertybrowser.cmake
Make/Common/: CMakeLists.txt  Controller.mare  Marefile  Nao.mare  SimRobot.mare  SimRobotCore2.mare  SimRobotEditor.mare  SimRobotHelp.mare  SimulatedNao.mare  SpecialActions.mare  Tests.mare  URC.mare  bstyle  bstyle-extension  buildInfo  bush.mare  cabslDocumentation  cabslDocumentation2  calibration  checkConfigs  checkDebugStatements  checkModules  checkParameters  checkRequirements  collectRefereeSignals  copyLogs  copyfiles  copyfiles.mare  deploy  deployDialog  digitalTwinBlack  digitalTwinRed  downloadCalibration  downloadLogs  formatExFAT  generateTeamList  libbhuman.mare  libgamectrl.mare  libqxt.mare  login  (+12 more)
Util/BehaviorOscillationVisualizer/: README.md  pyproject.toml  requirements.txt
Util/BehaviorOscillationVisualizer/behavior_oscillation_visualizer/: visualize.py
Util/BehaviorOscillationVisualizer/behavior_oscillation_visualizer/statistics/: angle_oscillation.py  angle_oscillation_test.py  behavior_oscillation.py  motion_oscillation.py  statistic.py  target_oscillation.py
Util/BehaviorOscillationVisualizer/behavior_oscillation_visualizer/statistics/util/: motion.py
Util/LogAnalyzer/: .gitignore  README.md  pyproject.toml  requirements.txt
Util/LogAnalyzer/log_analyzer/: cli.py
Util/LogAnalyzer/log_analyzer/statistics/: angle.py  annotation.py  behavior_oscillation.py  motion_oscillation.py  statistic.py  target_oscillation.py  walking_oscillation.py  walking_oscillation_test.py
Util/LogAnalyzer/log_analyzer/statistics/util/: motion.py
Util/SimRobot/Util/ode/Windows/src/: CHANGELOG.txt  CSR.txt  INSTALL.txt  Makefile.am  Makefile.in  README.md  aclocal.m4  bootstrap  configure  configure.ac  ltmain.sh  ode-config.in  ode.pc.in
Util/SimRobot/Util/ode/Windows/src/GIMPACT/: GIMPACT-LICENSE-BSD.TXT  Makefile.in
Util/SimRobot/Util/ode/Windows/src/GIMPACT/include/: Makefile.in
Util/SimRobot/Util/ode/Windows/src/GIMPACT/src/: Makefile.am  Makefile.in  gim_boxpruning.cpp  gim_contact.cpp  gim_math.cpp  gim_memory.cpp  gim_tri_tri_overlap.cpp  gim_trimesh.cpp  gim_trimesh_ray_collision.cpp  gim_trimesh_sphere_collision.cpp  gim_trimesh_trimesh_collision.cpp  gimpact.cpp
Util/SimRobot/Util/ode/Windows/src/OPCODE/: Makefile.in  OPC_AABBTree.cpp  Opcode.h
Util/SimRobot/Util/ode/Windows/src/OPCODE/Ice/: Makefile.in
Util/SimRobot/Util/ode/Windows/src/bindings/: Makefile.in
Util/SimRobot/Util/ode/Windows/src/bindings/python/: INSTALL.txt  TODO.txt  ode.pxd  ode.pyx  setup.py
Util/SimRobot/Util/ode/Windows/src/bindings/swig/: Makefile.am~  Makefile.in  ode.i~
Util/SimRobot/Util/ode/Windows/src/drawstuff/: Makefile.am  Makefile.in
Util/SimRobot/Util/ode/Windows/src/drawstuff/dstest/: Makefile.am  Makefile.in
Util/SimRobot/Util/ode/Windows/src/drawstuff/src/: Makefile.am  Makefile.in  drawstuff.cpp  osx.cpp  windows.cpp  x11.cpp
Util/SimRobot/Util/ode/Windows/src/drawstuff/textures/: checkered.ppm
Util/SimRobot/Util/ode/Windows/src/include/: Makefile.am  Makefile.in
Util/SimRobot/Util/ode/Windows/src/include/drawstuff/: Makefile.am  Makefile.in  drawstuff.h
Util/SimRobot/Util/ode/Windows/src/include/ode/: Makefile.am  Makefile.in  objects.h
Util/SimRobot/Util/ode/Windows/src/libccd/: Makefile.am  Makefile.in  configure  configure.ac
Util/SimRobot/Util/ode/Windows/src/libccd/src/: Makefile.am  Makefile.in  alloc.c  ccd.c  config.h.in  mpr.c  polytope.c  support.c  vec3.c
Util/SimRobot/Util/ode/Windows/src/m4/: libtool.m4
Util/SimRobot/Util/ode/Windows/src/ode/: Makefile.am  Makefile.in
Util/SimRobot/Util/ode/Windows/src/ode/demo/: Makefile.am  Makefile.in  basket_geom.h  bunny_geom.h  convex_bunny_geom.h  demo_I.cpp  demo_basket.cpp  demo_boxstack.cpp  demo_buggy.cpp  demo_cards.cpp  demo_chain1.c  demo_chain2.cpp  demo_collision.cpp  demo_crash.cpp  demo_cyl.cpp  demo_cylvssphere.cpp  demo_dball.cpp  demo_dhinge.cpp  demo_feedback.cpp  demo_friction.cpp  demo_gyro2.cpp  demo_gyroscopic.cpp  demo_heightfield.cpp  demo_hinge.cpp  demo_jointPR.cpp  demo_jointPU.cpp  demo_joints.cpp  demo_kinematic.cpp  demo_motion.cpp  demo_motor.cpp  demo_moving_convex.cpp  demo_moving_trimesh.cpp  demo_ode.cpp  demo_piston.cpp  demo_plane2d.cpp  demo_rfriction.cpp  demo_slider.cpp  demo_space.cpp  demo_space_stress.cpp  demo_step.cpp  (+6 more)
Util/SimRobot/Util/ode/Windows/src/ode/doc/: Doxyfile  Doxyfile.in  Makefile.am  Makefile.in  main.dox
Util/SimRobot/Util/ode/Windows/src/ode/src/: Makefile.am  Makefile.in  collision_convex_trimesh.cpp  collision_cylinder_trimesh.cpp  collision_kernel.cpp  collision_kernel.h  collision_libccd.cpp  collision_quadtreespace.cpp  collision_sapspace.cpp  collision_space.cpp  collision_space_internal.h  collision_std.h  collision_trimesh_box.cpp  collision_trimesh_ccylinder.cpp  collision_trimesh_colliders.h  collision_trimesh_disabled.cpp  collision_trimesh_distance.cpp  collision_trimesh_gimpact.cpp  collision_util.cpp  (+42 more)
Util/SimRobot/Util/ode/Windows/src/ou/: CHANGELOG.TXT  INSTALL.TXT  LICENSE-BSD.TXT  LICENSE-ZLIB.TXT  Makefile.in  README.TXT  aclocal.m4  configure  configure.ac
Util/SimRobot/Util/ode/Windows/src/tests/: Makefile.am  Makefile.in  collision.cpp  friction.cpp  joint.cpp  main.cpp  odemath.cpp
Util/SimRobot/Util/ode/Windows/src/tools/: README.txt  msw-release.bat  ode_convex_export.py  src-release.sh
(+5878 files in other folders)
